--- a/index.html
+++ b/index.html
@@ -117,9 +117,9 @@
           <div class="item-block">
             <div class="item-block-img item-block-img-1">
               <div class="featured-item-buy">
-                <button class="featured-item-buy-button">
+                <div class="featured-item-buy-button">
                   <img src="./img/basket.png" alt="" /> Add to Cart
-                </button>
+                </div>
               </div>
             </div>
             <div class="item-block-description">
@@ -137,9 +137,9 @@
           <div class="item-block">
             <div class="item-block-img item-block-img-2">
               <div class="featured-item-buy">
-                <button class="featured-item-buy-button">
+                <div class="featured-item-buy-button">
                   <img src="./img/basket.png" alt="" /> Add to Cart
-                </button>
+                </div>
               </div>
             </div>
             <div class="item-block-description">
@@ -157,9 +157,9 @@
           <div class="item-block">
             <div class="item-block-img item-block-img-3">
               <div class="featured-item-buy">
-                <button class="featured-item-buy-button">
+                <div class="featured-item-buy-button">
                   <img src="./img/basket.png" alt="" /> Add to Cart
-                </button>
+                </div>
               </div>
             </div>
             <div class="item-block-description">
@@ -177,9 +177,9 @@
           <div class="item-block">
             <div class="item-block-img item-block-img-4">
               <div class="featured-item-buy">
-                <button class="featured-item-buy-button">
+                <div class="featured-item-buy-button">
                   <img src="./img/basket.png" alt="" /> Add to Cart
-                </button>
+                </div>
               </div>
             </div>
             <div class="item-block-description">
@@ -197,9 +197,9 @@
           <div class="item-block">
             <div class="item-block-img item-block-img-5">
               <div class="featured-item-buy">
-                <button class="featured-item-buy-button">
+                <div class="featured-item-buy-button">
                   <img src="./img/basket.png" alt="" /> Add to Cart
-                </button>
+                </div>
               </div>
             </div>
             <div class="item-block-description">
@@ -217,9 +217,9 @@
           <div class="item-block">
             <div class="item-block-img item-block-img-6">
               <div class="featured-item-buy">
-                <button class="featured-item-buy-button">
+                <div class="featured-item-buy-button">
                   <img src="./img/basket.png" alt="" /> Add to Cart
-                </button>
+                </div>
               </div>
             </div>
             <div class="item-block-description">
